wrapped the articles in divs and gave those the responsive col classes because of padding-specificty issues. All good now.

--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,8 @@ article{
   border-top: 3px solid #BEC8D3;
   margin-top: 2ex;
   padding-top: 3ex;
+  padding-right: 5ex;
+  padding-left: 5ex;
 }
 
 .about{
